--- a/pages/style/contact.module.scss
+++ b/pages/style/contact.module.scss
@@ -12,13 +12,20 @@
   }
 
   .social {
-    @include fontSize2XL;
+    padding-top: $MagicNumber * 2;
+    @include fontSizeXL;
     a {
-      padding: 0 30px;
+      padding: 0 $MagicNumber;
     }
-  }
-
-  .social {
     display: flex;
+    @media screen and (max-width: 700px) {
+      a {
+        padding: 0 30px;
+      }
+    }
+    @media screen and (max-width: 550px) {
+      flex-direction: column;
+      align-items: center;
+    }
   }
 }
